--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : "harper_lannn"
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/lan-tao-80466915b/"
+  linkedin         : "lan-tao-80466915b/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
