--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Lan Tao"
   pronouns         : # "she/her"  
-  bio              : "Ph.D. Candidate in Statistics"
+  bio              : "Ph.D. Candidate in Statistics at UCLA"
   location         : "Los Angeles, CA"
   employer         : "University of California, Los Angeles"
   uri              : # URL
