--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # "she/her"  
   bio              : "Ph.D. Candidate in Statistics at UCLA"
   location         : "Los Angeles, CA"
-  employer         : "University of California, Los Angeles"
+  employer         : "UCLA"
   uri              : # URL
   email            : "lantao@ucla.edu" 
 
